# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boosted_tree_kungfu"
version = "0.1.0"
description = "Library for training and deploying boosted tree models."
readme = "README.md"
authors = [
  "ZZ <zhangzhang.si@gmail.com>"
]
license = "MIT"
repository = "https://github.com/kungfuai/boosted_tree_kungfu"
homepage = "https://github.com/kungfuai/boosted_tree_kungfu"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"boosted_tree_kungfu" = "boosted_tree_kungfu.__main__:app"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pip = ">=21.1"
importlib_metadata = {version = "^4.0.1"}
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.1.0"
scikit-learn = ">=0.22.0"
pandas = ">=0.23.0"
lightgbm = ">=2"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^20.8b1"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.9.1"
pydocstyle = "^6.0.0"
pre-commit = "^2.9.3"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
